some files changed

--- a/view/index.html
+++ b/view/index.html
@@ -4,9 +4,44 @@
 	<title>Index</title>
 </head>
 <body>
+	<table width="100%"  >
+		<tr>
+		<th align="center">
+			<img src="../model/media/logo.jpg" height="60px">
+		</th>
+	
+		</tr>
+	</table>
+
+
 	<center>
-		<a href="login.html"> Login</a> |
-		<a href="signup.html"> Signup</a>
-	</center>
+	
+		<table border="1" width="100%" >
+			<tr>
+				<th align="center">
+					<a href="signup.html"> Signup</a>
+				</th>
+				<th align="center">
+					<a href="login.html"> Login</a> 
+				</th>
+			
+				<th align="center">
+					<a href="about us"> About Us</a>
+				</th>
+				
+			</tr>
+			
+		</table>
+
+		<table border="1" width="100%" >
+			<tr>
+				<p>Copyright@2021</p>
+
+			</tr>
+
+		</table>
+
+
+
 </body>	
 </html>
