--- a/view/index.html
+++ b/view/index.html
@@ -26,7 +26,7 @@
 				</th>
 			
 				<th align="center">
-					<a href="about us"> About Us</a>
+					<a href="aboutUs.php"> About Us</a>
 				</th>
 				
 			</tr>
