--- a/view/index.html
+++ b/view/index.html
@@ -19,10 +19,10 @@
 		<table border="1" width="100%" >
 			<tr>
 				<th align="center">
-					<a href="signup.html"> Signup</a>
+					<a href="signup.php"> Signup</a>
 				</th>
 				<th align="center">
-					<a href="login.html"> Login</a> 
+					<a href="login.php"> Login</a> 
 				</th>
 			
 				<th align="center">
