--- a/view/loginCus.html
+++ b/view/loginCus.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <table border="1" width="100%" align="center">
+    <!-- <table border="1" width="100%" align="center">
         <tr>
             <td colspan="3" height="80px" align="left">
                 <img src="../Assets/MabLogo.jpg" height="70px">
@@ -19,7 +21,15 @@
                 </h4>
             </td>
         </tr>
-    </table>
+    </table> -->
+
+    <div class="menu-bar">
+        <ul>
+            <li ><img src="../Assets/MabLogo.jpg" height="70px"></li>
+            <li class="active"><a href="aboutUs.php"><i class="fa fa-info-circle"></i>About Us</a></li>
+            <li><a href="signupCus.html"><i class="fa fa-user-plus"></i>Signup</a></li>
+        </ul>
+    </div>
     <table border="1" width="100%" align="center" height="400px">
         <td align="center">
             
@@ -34,7 +44,11 @@
                         <tr>
                             <td>Password</td>
                             <td><input type="password" name="password" value=""></td>
-                        </tr>                        
+                        </tr> 
+                        <tr>
+                            <td>Remember Me</td>
+                            <td><input type="checkbox" name="remember" value=""></td>
+                        </tr>                       
                         <tr>
                             <td></td>
                             <td>
@@ -47,9 +61,15 @@
             </form>
         </td>
         </table>
-    <table border="1" width="100%" height="50px">
+    <!-- <table border="1" width="100%" height="50px">
         <td colspan="3"><center>Copyright2021@MAB</center></td> 
-    </table> 
+    </table>  -->
+    <div class="menu-bar">
+        <ul>
+            <li class="active">Copyright2021@MAB</a></li>
+        </ul>
+    </div>
+    
     
 </body>
 </html>
