--- a/view/signupCus.html
+++ b/view/signupCus.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
-    <table border="1" width="100%" align="center">
+<body> 
+    <!-- <img src="../Assets/MabLogo.jpg" height="100px" align="left">  -->
+    <div class="menu-bar">
+    <ul>
+        <li ><img src="../Assets/MabLogo.jpg" height="70px"></li>
+        <li class="active"><a href="Contact.html"><i class="fa fa-compress"></i>Contact</a></li>
+        <li><a href="loginCus.html"><i class="fa fa-sign-in"></i>Login</a></li>
+    </ul>
+    </div>
+    <!-- <table border="1" width="100%" align="center">
         <tr>
             <td colspan="3" height="80px" align="left">
                 <img src="../Assets/MabLogo.jpg" height="70px">
@@ -19,7 +29,7 @@
                 </h4>
             </td>
         </tr>
-    </table>
+    </table> -->
     <table border="1" width="100%" align="center" height="400px">
         <td align="center">
             
@@ -86,9 +96,17 @@
             </form>
         </td>
         </table>
-    <table border="1" width="100%" height="50px">
-        <td colspan="3"><center>Copyright2021@MAB</center></td> 
-    </table> 
+
+
+    <!-- <table border="1" width="100%" height="50px" style="background-color: rgb(6, 32, 58 );">
+        <td colspan="3" ><center>Copyright2021@MAB</center></td> 
+    </table>  -->
+
+    <div class="menu-bar">
+        <ul>
+            <li class="active">Copyright2021@MAB</a></li>
+        </ul>
+    </div>
     
 </body>
 </html>
