--- a/view/signupCus.html
+++ b/view/signupCus.html
@@ -30,6 +30,8 @@
             </td>
         </tr>
     </table> -->
+   <div class="container">
+       <div>
     <table border="1" width="100%" align="center" height="400px">
         <td align="center">
             
@@ -96,6 +98,9 @@
             </form>
         </td>
         </table>
+        </div>
+
+        </div>
 
 
     <!-- <table border="1" width="100%" height="50px" style="background-color: rgb(6, 32, 58 );">
