--- a/view/cssadmin/styles.css
+++ b/view/cssadmin/styles.css
@@ -90,7 +90,7 @@ ul{
     width: 100%;
     /* Height of the footer*/ 
     height: 40px;
-    color: black;
+    color: aquamarine;
     font-weight: bold;
     text-shadow:#eef2f3;
     background-color: aquamarine;
