--- a/view/signupCus.html
+++ b/view/signupCus.html
@@ -7,7 +7,7 @@
     <title>Signup</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="../js/regcheck.js"></script>
+    <script type="text/javascript" src="../js/regcheckCus.js"></script>
 </head>
 <body> 
     <!-- <img src="../Assets/MabLogo.jpg" height="100px" align="left">  -->
@@ -36,7 +36,7 @@
     <table border="1" width="100%" align="center" height="400px">
         <td align="center">
             
-            <form id="reg" name="reg" method="post" action="../controller/regcheckCus.php" onsubmit="return validate()">               
+            <form id="reg" name="reg" method="post" action="../controller/regcheckCus.php" onSubmit="return validate()">               
                 <fieldset style="width:320px" >
                     <legend>
                         <h3>
