--- a/view/cssadmin/styles.css
+++ b/view/cssadmin/styles.css
@@ -90,7 +90,7 @@ ul{
     width: 100%;
     /* Height of the footer*/ 
     height: 40px;
-    color: aquamarine;
+    color: green;
     font-weight: bold;
     text-shadow:#eef2f3;
     background-color: aquamarine;
@@ -98,3 +98,55 @@ ul{
 
    
 }
+
+.text-center{
+    text-align: center;
+    margin-bottom: 20px;
+    }
+    
+    .profile-images-card{
+        margin: auto;
+        display: table;
+        background: #fff;
+        padding: 30px 50px;
+        box-shadow: 0px 0px 5px #ddd;
+    }
+    
+    .profile-images{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        overflow: hidden;
+    }
+
+    .dis-images{
+        margin-top: 50px;
+
+        width: 300px;
+        height: 300px;
+      
+    }
+    .dis-images img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    
+    .profile-images img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .custom-file input[type='file']{
+        display: none
+    }
+    
+    .custom-file label{
+        color: #000;
+        text-align: center;
+        margin: auto;
+        margin-top: 15px;
+    }
+    
