--- a/view/cssadmin/styles.css
+++ b/view/cssadmin/styles.css
@@ -84,7 +84,7 @@ ul{
 }
 
 .footer{
-    position: fixed;
+    margin-top: auto;
     padding: 10px 10px 0px 10px;
     bottom: 0;
     width: 100%;
@@ -94,6 +94,8 @@ ul{
     font-weight: bold;
     text-shadow:#eef2f3;
     background-color: aquamarine;
+    position: relative;/* Updated Property */
+
     
 
    
@@ -121,7 +123,6 @@ ul{
 
     .dis-images{
         margin-top: 50px;
-
         width: 300px;
         height: 300px;
       
@@ -149,4 +150,17 @@ ul{
         margin: auto;
         margin-top: 15px;
     }
+
+    .pro-images{
+        width: 100px;
+        height: 100px;
+        
+      
+    }
+    .pro-images img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
     
