--- a/view/cssadmin/styles.css
+++ b/view/cssadmin/styles.css
@@ -3,14 +3,141 @@ body{
     font-family: Poppins;
     background: #8e9eab;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to left, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
+    color:black;
+
+}
+.header{
+   
+    width: 100%;
+    height: 80px;
+}
+
+.logo_container{
+    height: 100%;
+    display: table;
+    float: left;
+
+}
+
+.logo_container h1{
+    color:white;
+    height: 100%;
+    vertical-align: middle;
+    font-size: 32;
+    font-weight: 600;
 
 
 }
+
+ ul{
+    list-style-type: none;}
+ ul li{
+     background-color: #eef2f3;
+        color: black;
+
+}
+
+ul li ul li:hover{
+    background:aquamarine;
+    font-weight: 600;
+
+}
+
+.wrapper ul ul{
+    display: none;
+}
+
+.wrapper ul li:hover >ul{
+    display: block;
+}
+.wrapper ul ul ul{
+    margin-left: 170px;
+    top :0;
+    position: absolute;
+
+}
+
+
+a{
+    vertical-align: middle;
+
+    text-align: center;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: large;
+    color: black;
+    
+
+}
+/* .header{
+   
+    width: 100%;
+    height: 80px;
+    display: block;
+    background-color: black;
+    
+}
+.inner_header{
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+
+
+}
+.logo_container{
+    height: 100%;
+    display: table;
+    float: left;
+
+}
+.logo_container h1{
+    color:white;
+    height: 100%;
+    vertical-align: middle;
+    font-size: 32;
+    font-weight: 600;
+
+
+}
+
+.navigation{
+    float: right;
+    height: 100%;
+    text-decoration: none;
+
+}
+.navigation a{
+    height: 100%;
+    display: table;
+    float: left;
+    padding: 0 20px;
+    text-decoration: none;
+
+
+}
+
+.navigation a li{
+    display: table-cell;
+    vertical-align:middle;
+    height: 100%;
+    font-size: 16px;
+    color: white; 
+}
+
+.logo_container h1 span{
+    font-weight: 800;
+} */
+
+
+
+
+
 h2{
-    color: green;
-
+    color: #228B22;
 }
+
 fieldset{
     width:30%;
     background-image: linear-gradient( 89.2deg,  rgba(191,241,236,1) 22.3%, rgba(109,192,236,1) 84.1% );
@@ -33,6 +160,7 @@ fieldset{
 
 ul.a {
     list-style-type: circle;
+    text-decoration: wavy;
   }
 
 .data-table{
@@ -64,12 +192,6 @@ ul.a {
 .data-table tbody tr:last-of-type{
     border-bottom: 4px solid aquamarine;
 }
-ul{
-    color: aqua;
-    text-shadow:#eef2f3;
-    text-emphasis-color: green;
-    
-}
 
 .bottom-menu-bar
 {
@@ -96,10 +218,10 @@ ul{
     background-color: aquamarine;
     position: relative;/* Updated Property */
 
-    
-
-   
 }
+
+
+
 
 .text-center{
     text-align: center;
@@ -111,7 +233,7 @@ ul{
 
     background: aquamarine;
     background-image: linear-gradient( 43deg,  rgba(191,241,236,1) 22.3%, rgba(109,192,236,1) 84.1% );
-    
+
     }
     
     .profile-images-card{
@@ -121,12 +243,19 @@ ul{
         padding: 30px 50px;
         box-shadow: 0px 0px 5px #ddd;
     }
+
+    
     
     .profile-images{
-        width: 150px;
-        height: 150px;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
         overflow: hidden;
+    }
+    .profile-images img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .dis-images{
@@ -140,13 +269,23 @@ ul{
         height: 100%;
         object-fit: cover;
     }
-    
-    
-    .profile-images img{
+
+    .logo-images{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-top: 0,auto;
+    }
+    .logo-images img{
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
+    
+    
+    
+   
     
     .custom-file input[type='file']{
         display: none
