--- a/view/cssadmin/styles.css
+++ b/view/cssadmin/styles.css
@@ -1,10 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,700,900');
+html {
+    font-size: 1.1rem;
+    font-family: Opensans, sans-serif;
+    position: relative;
+    min-height: 100%;
+  }
+  
+  
 body{
     font-family: Poppins;
     background: #8e9eab;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
     color:black;
+    margin-bottom: 60px;
+
+
+
+
 
 }
 .header{
@@ -50,7 +63,7 @@ ul li:hover{
 
 }
 
-.wrapper ul ul{
+/* .wrapper ul ul{
     display: none;
 }
 
@@ -62,7 +75,7 @@ ul li:hover{
     top :0;
     position: absolute;
 
-}
+} */
 
 
 a{
@@ -137,11 +150,13 @@ a{
 } */
 
 
-
+.green{
+    color: green;
+}
 
 
 h2{
-    color: #228B22;
+    color: black;
 }
 
 fieldset{
@@ -212,13 +227,13 @@ ul.a {
 }
 
 .footer{
-    margin-top: auto;
-    padding: 10px 10px 0px 10px;
+    margin-top: 40px;
+    padding: 10px 10px 10px 10px;
     bottom: 0;
     width: 100%;
     /* Height of the footer*/ 
     height: 40px;
-    color: green;
+    color: black;
     font-weight: bold;
     text-shadow:#eef2f3;
     background-color: aquamarine;
