--- a/view/cssadmin/styles.css
+++ b/view/cssadmin/styles.css
@@ -32,11 +32,11 @@ body{
 
 }
 
-.logo_container h1{
+.logo_container h3{
     color:white;
     height: 100%;
     vertical-align: middle;
-    font-size: 32;
+    font-size: 20;
     font-weight: 600;
 
 
@@ -45,19 +45,19 @@ body{
  ul{
     list-style-type: none;}
  ul li{
-     background-color: #eef2f3;
         color: black;
 
 }
 
 ul li ul li:hover{
-    background:cyan;
+    background:aquamarine;
     font-weight: 600;
 
 }
 
 ul li:hover{
-    background:8e9eab;
+    background-color: whitesmoke;
+
     font-weight: 600;
 
 }
@@ -86,6 +86,29 @@ a{
     font-size: large;
     color: black;
     
+
+}
+.logo_container{
+    height: 100%;
+    display: table;
+    float: left;
+
+}
+.logo_container h2{
+    color:black;
+    height: 100%;
+    vertical-align: middle;
+    font-size: 20;
+    font-weight: 300;
+
+
+}
+.inner_header{
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+
 
 }
 /* .header{
